KULCAP-1365: The fields listed are now validated if changed and is in-active. - Asset Acquisition Type - Asset Condition - Asset Depreciation Method - Asset Status - Asset Type Code - Owner - Financial Object Subtype Code

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1953,6 +1953,23 @@ error.asset.fabrication.lifeLimit.required=Years expected to retain asset is a r
 error.asset.fabrication.lifeLimit.negative=Years expected to retain asset should be a positive number.
 error.asset.org.owner.account.inactive=Organization Owner Account is either expired or closed.
 
+#***** Start Asset Edit Messages ***********
+error.owner.changed = The Owner cannot be changed.
+error.acquisition.type.code.changed = The Acquisition Type Code cannot be changed.
+error.asset.status.changed = The Asset Status Code cannot be changed.
+error.asset.condition.changed = The Asset Condition cannot be changed.
+error.type.code.changed = The Asset Type Code cannot be changed.
+error.financial.object.subtype.code.changed = The Financial Object Subtype Code cannot be changed.
+error.deprecation.method.code.changed = The Deprecation Method Code cannot be changed.
+
+error.owner.inactive = The Owner is inactive and cannot be changed.
+error.acquisition.type.code.inactive = The Acquisition Type Code is inactive and cannot be changed.
+error.asset.status.inactive = The Asset Status Code is inactive and cannot be changed.
+error.asset.condition.inactive = The Asset Condition is inactive and cannot be changed.
+error.type.code.inactive = The Asset Type Code is inactive and cannot be changed.
+error.financial.object.subtype.code.inactive = The Financial Object Subtype Code is inactive and cannot be changed.
+error.deprecation.method.code.inactive = The Deprecation Method Code is inactive and cannot be changed.
+
 # ********** Asset Repair History related messages *********
 error.duplicate.incident.date = Incident date should be unique.
 
