Moved KFS constant out of Rice.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2300,3 +2300,6 @@ message.batch.file.admin.delete.error=An error occurred while deleting {0}.
 message.batch.file.admin.delete.cancelled={0} was NOT deleted.
 
 message.batch.log.email.body=See {0} for details.  To view the log, please use the Batch File lookup from the Administration tab.
+
+# Kim Type Services error messages
+error.chart.or.org.notempty.all.required=If a chart code or an organization code is specified, then chart code, organization code, and namespace are all required.
