improving configurability of auth filter and doing some cleanup

--- a/build.properties
+++ b/build.properties
@@ -122,11 +122,7 @@ appserver.config.dir=${appserver.home}/conf
 appserver.localhost.dir=${appserver.config.dir}/Catalina/localhost
 appserver.work.dir=${appserver.home}/work/Catalina/localhost
 # tells the build what the base url is for the tomcat instance where the application will be deployed
-
-application.http.scheme=http
-application.host=localhost
-http.port=8080
-appserver.url=${application.http.scheme}://${application.host}:${http.port}/
+appserver.url=http://localhost:8080
 
 # determines what ${build.environment} the KualiConfigurationService considers your production environment
 production.environment.code=prd
@@ -277,15 +273,7 @@ temp.directory=${external.work.directory}/temp
 reports.directory=${external.work.directory}/reports
 
 # the base url of the application
-application.url=${appserver.url}${ant.project.name}-${build.environment}
-# the base url for environment-based static content that is external to the application
-htdocs.url=${appserver.url}${ant.project.name}/${build.environment}/
-# the base url for the logs directory, if accessible via the web
-htdocs.logs.url=${htdocs.url}logs/
-# the base url for the reports directory, if accessible via the web
-htdocs.reports.url=${htdocs.url}reports/
-# the base urls for the staging directory, if accessible via the web
-htdocs.staging.url=${htdocs.url}staging/
+application.url=${appserver.url}/${ant.project.name}-${build.environment}
 # the base url for static content like images and help that could reside within the application or be maintained by other group(s) on other server(s)
 externalizable.static.content.url=${application.url}/static
 # the base url for help content
@@ -335,10 +323,10 @@ rice.workflow.xml.initial.delay.secs=10
 # globally disable or enable the outbox (screen to which there is a link in the action list that shows the documents a user has taken action on)
 rice.workflow.actionlist.outbox=false
 
+# workflow web service configuration
 secure.workflowdocument.javaservice.endpoint=true
 secure.workflowutility.javaservice.endpoint=true
 simpleDocumentActionsService.security=true
-
 
 rice.server.url=${application.url}
 # the base url for the rice struts module
@@ -377,10 +365,6 @@ rice.server.datasource.pool.size=${datasource.pool.size}
 rice.server.datasource.connection.timeout=${datasource.connection.timeout}
 rice.server.datasource.validating.query=${datasource.validating.query}
 rice.server.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
-# commented out since the build process sets these dynamically 
-#rice.server.datasource.platform=${datasource.platform}
-#rice.server.datasource.url=${datasource.url}
-#rice.server.datasource.driver.class=${datasource.driver.class}
 
 # KIM Cache Settings
 
@@ -397,10 +381,71 @@ kim.cache.responsibility.max.age.seconds=30
 kim.cache.person.max.size=3000
 kim.cache.person.max.age.seconds=3600
 
+# KNS Cache Settings
+
 kns.cache.parameter.max.size=200
 kns.cache.parameter.max.age.seconds=3600
 kns.cache.nonDatabaseComponent.max.size=50
 kns.cache.nonDatabaseComponent.max.age.seconds=3600
+
+# Web Authentication
+
+# reference in 2 authentication properties below
+cas.url=https://test.kuali.org/cas-stg
+# the value of this property will be included in the filter section of web.xml
+authentication.filter.definition=<filter>\
+\n\t\t<filter-name>CAS Authentication Filter</filter-name>\
+\n\t\t<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>\
+\n\t\t<init-param>\
+\n\t\t\t<param-name>casServerLoginUrl</param-name>\
+\n\t\t\t<param-value>${cas.url}/login</param-value>\
+\n\t\t</init-param>\
+\n\t\t<init-param>\
+\n\t\t\t<param-name>serverName</param-name>\
+\n\t\t\t<param-value>${appserver.url}</param-value>\
+\n\t\t</init-param>\
+\n\t</filter>\
+\n\t<filter>\
+\n\t\t<filter-name>CAS Validation Filter</filter-name>\
+\n\t\t<filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>\
+\n\t\t<init-param>\
+\n\t\t\t<param-name>casServerUrlPrefix</param-name>\
+\n\t\t\t<param-value>${cas.url}</param-value>\
+\n\t\t</init-param>\
+\n\t\t<init-param>\
+\n\t\t\t<param-name>serverName</param-name>\
+\n\t\t\t<param-value>${appserver.url}</param-value>\
+\n\t\t</init-param>\
+\n\t</filter>\
+\n\t<filter>\
+\n\t\t<filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>\
+\n\t\t<filter-class>org.jasig.cas.client.util.HttpServletRequestWrapperFilter</filter-class>\
+\n\t</filter>
+# the value of this property will be included in the filter mapping section of web.xml
+authentication.filter.mappings=<filter-mapping>\
+\n\t\t<filter-name>CAS Authentication Filter</filter-name>\
+\n\t\t\t<servlet-name>action</servlet-name>\
+\n\t\t</filter-mapping>\
+\n\t\t<filter-mapping>\
+\n\t\t\t<filter-name>CAS Validation Filter</filter-name>\
+\n\t\t\t<servlet-name>action</servlet-name>\
+\n\t\t</filter-mapping>\
+\n\t\t<filter-mapping>\
+\n\t\t\t<filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>\
+\n\t\t\t<servlet-name>action</servlet-name>\
+\n\t\t</filter-mapping>\
+\n\t\t<filter-mapping>\
+\n\t\t\t<filter-name>CAS Authentication Filter</filter-name>\
+\n\t\t\t<servlet-name>dwr-invoker</servlet-name>\
+\n\t\t</filter-mapping>\
+\n\t\t<filter-mapping>\
+\n\t\t\t<filter-name>CAS Validation Filter</filter-name>\
+\n\t\t\t<servlet-name>dwr-invoker</servlet-name>\
+\n\t\t</filter-mapping>\
+\n\t\t<filter-mapping>\
+\n\t\t\t<filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>\
+\n\t\t\t<servlet-name>dwr-invoker</servlet-name>\
+\n\t\t</filter-mapping>
 
 # 3. CONFIGURATION MANAGEMENT PROPERTIES
 
@@ -422,35 +467,17 @@ dependencies.project.directory=${projects.directory}/${ant.project.name}-depende
 rice.project.directory=${projects.directory}/${rice.name}
 rice.web.directory=${rice.project.directory}/web/src/main/webapp
 
-# CAS Properties
-
+# for development efficience, this property will deploy rice cas locally
 #deploy.local.cas.server=true
-
-# when using local CAS server
+# the following 6 properties are only used when cas is deployed locally
 cas.context.name=cas
 cas.context.file=context-cas.xml
-cas.war.file.name=kuali-cas-1.0.0.war
-cas.war.file.path=${basedir}/${build.appserver.directory}/${cas.war.file.name}
-
-# general CAS URLs - used to build web.xml for CAS client configuration
-#cas.url=${appserver.url}${cas.context.name}
-cas.url=https://test.kuali.org/cas-stg
-# this should be the host name and port if the KFS instance - no path
-cas.kfs.server.name=${application.http.scheme}://${application.host}:${http.port}
-cas.login.url=${cas.url}/login
-cas.validate.url=${cas.url}/serviceValidate
-
+cas.datasource.username=${datasource.username}
+cas.datasource.password=${datasource.password}
 # determines whether cas requires that the application be secured via ssl
 cas.require.https=false
 # determines whether the password field appears on the cas login screen and is validated
 cas.validate.password=false
-
-cas.datasource.username=${datasource.username}
-cas.datasource.password=${datasource.password}
-# commented out since the build process sets these dynamically 
-#cas.datasource.driver.class=${datasource.driver.class}
-#cas.datasource.url=${datasource.url}
-
 
 # 4. RELEASE PACKAGING PROPERTIES
 
