--- a/build.properties
+++ b/build.properties
@@ -124,6 +124,9 @@ appserver.work.dir=${appserver.home}/work/Catalina/localhost
 # tells the build what the base url is for the tomcat instance where the application will be deployed
 appserver.url=http://localhost:8080
 
+# allows insertion of custom content into the tomcat context file
+custom.context.content=
+
 # determines what ${build.environment} the KualiConfigurationService considers your production environment
 production.environment.code=prd
 # specify the number of connections in the pool
