more work on institutional customizations

--- a/build.properties
+++ b/build.properties
@@ -89,6 +89,8 @@ oracle.server.datasource.platform=org.kuali.rice.core.database.platform.OraclePl
 
 # miscellaneous build.xml configuration
 
+institutional.customization.file.prefix=institutional-customization-
+
 compile.min.memory=40M
 compile.max.memory=256M
 
@@ -124,6 +126,8 @@ appserver.work.dir=${appserver.home}/work/Catalina/localhost
 # tells the build what the base url is for the tomcat instance where the application will be deployed
 appserver.url=http://localhost:8080
 
+# if this property is set, the build will copy files from this location into the project lib directory
+#custom.application.lib.directory=
 # allows insertion of custom content into the tomcat context file
 custom.context.content=
 
