EBSFST-185 KFSMI-4228 EBSFST-183

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1464,7 +1464,8 @@ warning.budget.authorizationDisabled = Warning! The authorization check logic ha
 
 # Batch Upload Screen
 message.batchUpload.title.procurementCard=Procurement Card Batch Upload
-message.batchUpload.title.collector=GL Collector Batch Upload
+message.batchUpload.title.collector=GL Collector (XML format) Batch Upload
+message.batchUpload.title.collector,flat.file=GL Collector (flat file format) Batch Upload
 message.batchUpload.title.enterprise.feeder=Enterprise Feeder Batch Upload
 message.batchUpload.title.einvoice=Electronic Invoice Batch Upload
 message.batchUpload.saveSuccessful=File was successfully saved
