--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -589,6 +589,7 @@ error.labor.PayrollEndDateFiscalYearNotFound = Payroll End Date Fiscal Year not 
 error.document.advanceDeposit.requiredNumberOfAdvanceDepositsNotMet=This document must contain at least one advance deposit before it can be submitted.
 error.document.advanceDeposit.balance=This document is out of balance.  The accounting line total must equal the advance deposit total.
 error.document.advanceDeposit.zeroAmount=The advance deposit amount cannot be zero.  Please enter a valid positive or negative amount.
+error.document.advanceDeposit.ifAnyElectronicPaymentsThenAllElectronicPayments = If any of the accounting lines on this document represent electronic payments, then all accounting lines on the document must go to an electronic payment account.
 
 # Cash Receipt document
 label.document.cashReceipt.printCoverSheet=Print Cash Receipt Coversheet
