KULCAP-1374:  Revised validation.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1956,13 +1956,20 @@ error.asset.fabrication.lifeLimit.negative=Years expected to retain asset should
 error.asset.org.owner.account.inactive=Organization Owner Account is either expired or closed.
 
 #***** Start Asset Edit Messages ***********
-error.owner.inactive = The Owner is inactive and cannot be changed.
-error.acquisition.type.code.inactive = The Acquisition Type Code is inactive and cannot be changed.
-error.asset.status.inactive = The Asset Status Code is inactive and cannot be changed.
-error.asset.condition.inactive = The Asset Condition is inactive and cannot be changed.
-error.type.code.inactive = The Asset Type Code is inactive and cannot be changed.
-error.financial.object.subtype.code.inactive = The Financial Object Subtype Code is inactive and cannot be changed.
-error.deprecation.method.code.inactive = The Deprecation Method Code is inactive and cannot be changed.
+error.owner.invalid = The Owner is not a valid.
+error.acquisition.type.code.invalid = The Acquisition Type Code is not a valid.
+error.asset.status.invalid = The Asset Status Code is not a valid.
+error.asset.condition.invalid = The Asset Condition is not a valid.
+error.type.code.invalid = The Asset Type Code is not a valid .
+error.financial.object.subtype.code.invalid = The Financial Object Subtype Code is not a valid .
+error.deprecation.method.code.invalid = The Deprecation Method Code is not a valid .
+error.owner.inactive = The Owner is not active.
+error.acquisition.type.code.inactive = The Acquisition Type Code is not active.
+error.asset.status.inactive = The Asset Status Code is not active.
+error.asset.condition.inactive = The Asset Condition is not active.
+error.type.code.inactive = The Asset Type Code is not active.
+error.financial.object.subtype.code.inactive = The Financial Object Subtype Code is not active.
+error.deprecation.method.code.inactive = The Deprecation Method Code is not active.
 
 # ********** Asset Repair History related messages *********
 error.duplicate.incident.date = Incident date should be unique.
