Committing changes related to new patch version of cxf and some additions to the KEW web services.

--- a/build.properties
+++ b/build.properties
@@ -373,6 +373,10 @@ rice.server.datasource.connection.timeout=${datasource.connection.timeout}
 rice.server.datasource.validating.query=${datasource.validating.query}
 rice.server.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
 
+# endpoint security settings
+kim.soapExposedService.jaxws.security=true
+secure.workflowutility.soapservice.endpoint=true
+
 # KIM Cache Settings
 
 kim.cache.entity.max.size=3000
