--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -770,7 +770,8 @@ error.collector.mixedBalanceTypes=Multiple balance types were found in the origi
 error.collector.duplicateHeader=Batch header was matched to a previously loaded batch.
 error.collector.nonmatchingDetailKey=Detail record with key {0} does not have a matching gl entry record.
 collector.demergerEmailSubjectLine=GLE Input Data - INVALID DOCUMENT
-
+error.collector.header.record.missing=Collector Header (HD) record missing at line {0}.
+error.collector.trailer.record.missing=Collector Trailer (TL) record missing at line {0}.
 # WRITE CASH MESSAGES FOR OrganizationReversionProcess
 cash.reverted=CASH REVERTED TO
 fund.balance.reverted=FUND BALANCE REVERTED TO 
