--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1048,6 +1048,8 @@ errors.ap.attachmentRequired=An invoice must be attached to proceed
 ap.question.confirm.invoice.mismatch=Warning: The {0} total does not match the total entered on the start screen. Do you want to continue?
 ap.question.cancelAP=Are you sure you want to cancel this document?
 ap.question.actionOnPoCancel=Would you like to Reopen the po
+ap.reopens.purchase.order.note=Purchase Order was Reopened based on the need to take action on a Payment Request or Credit Memo.
+        
 
 # Payment Request
 error.paymentRequest.item.TotalInvoice.notEqual=Error: Qty inv x Unit Cost &#8800; Extended Cost
