KULCAP-1374: Added validation for Organization Owner Account Number.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1957,15 +1957,16 @@ error.asset.fabrication.completionDate.past=Fabrication estimated completion dat
 error.asset.fabrication.lifeLimit.required=Years expected to retain asset is a required field.
 error.asset.fabrication.lifeLimit.negative=Years expected to retain asset should be a positive number.
 error.asset.org.owner.account.inactive=Organization Owner Account is either expired or closed.
+error.asset.org.owner.account.invalid = The Organization Owner Account is not valid.
 
 #***** Start Asset Edit Messages ***********
-error.owner.invalid = The Owner is not a valid.
-error.acquisition.type.code.invalid = The Acquisition Type Code is not a valid.
-error.asset.status.invalid = The Asset Status Code is not a valid.
-error.asset.condition.invalid = The Asset Condition is not a valid.
-error.type.code.invalid = The Asset Type Code is not a valid .
-error.financial.object.subtype.code.invalid = The Financial Object Subtype Code is not a valid .
-error.deprecation.method.code.invalid = The Deprecation Method Code is not a valid .
+error.owner.invalid = The Owner is not valid.
+error.acquisition.type.code.invalid = The Acquisition Type Code is not valid.
+error.asset.status.invalid = The Asset Status Code is not valid.
+error.asset.condition.invalid = The Asset Condition is not valid.
+error.type.code.invalid = The Asset Type Code is not valid.
+error.financial.object.subtype.code.invalid = The Financial Object Subtype Code is not valid.
+error.deprecation.method.code.invalid = The Deprecation Method Code is not valid.
 error.owner.inactive = The Owner is not active.
 error.acquisition.type.code.inactive = The Acquisition Type Code is not active.
 error.asset.status.inactive = The Asset Status Code is not active.
