--- a/build.properties
+++ b/build.properties
@@ -543,3 +543,8 @@ periodic.thread.dump.seconds=300
 validate.ebo.references=true
 
 report.writer.service.new.line.characters=\\n
+
+# properties for Action List notification
+email.reminder.lifecycle.enabled=false
+mail.smtp.host=${mail.relay.server}
+mail.transport.protocol=smtp
