--- a/.classpath
+++ b/.classpath
@@ -7,33 +7,59 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="var" path="TOMCAT_LIB_HOME/servlet-api.jar"/>
 	<classpathentry exported="true" kind="var" path="TOMCAT_LIB_HOME/jsp-api.jar"/>
-	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/backport-util-concurrent-2.1.jar"/>	
+	<classpathentry exported="true" kind="var" path="DRIVERS_DIRECTORY/ojdbc14.jar"/>
+	<classpathentry kind="var" path="DRIVERS_DIRECTORY/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/activation-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/backport-util-concurrent-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-beanutils-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-digester-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-httpclient-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-io-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-pool-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/db-ojb-1.0.4-kuali-mods-debug.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/displaytag-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/dwr-1.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/itext-1.4.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/mail-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jdom-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/oscache-2.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/quartz-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/saaj-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/spring-2.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/spring-modules-ojb-0.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/struts-1.2.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xercesImpl-2.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xstream-1.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="test/lib/junit-3.8.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jasperreports-2.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-lang-2.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="build/external/appserver/commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jotm_iiop_stubs.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jotm_jrmp_stubs.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jotm.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/external/appserver/xapool.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/log4j-1.2.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jboss-common-core-2.0.4.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/persistence-api-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxb-api-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxb-xjc-2.1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-activation_1.1_spec-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-annotation_1.0_spec-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-jaxws_2.1_spec-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-ws-metadata_2.0_spec-1.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xml-resolver-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/cglib-nodep-2.1_3.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/wsdl4j-1.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxen-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/rice-api-1.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/rice-impl-1.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/opencsv-1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/cxf-2.1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxb-impl-2.1.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/wss4j-1.5.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/XmlSchema-1.4.5.jar"/>
 	<classpathentry kind="output" path="work/web-root/WEB-INF/classes"/>
 </classpath>
