--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1,4 +1,9 @@
 app.title=KFS
+app.copyright=Copyright 2005-{0} The Kuali Foundation. All rights reserved.<BR/>Portions of Kuali are copyrighted by other parties as described in the <a target="_ack" href="{1}">Acknowledgments</a> screen.
+app.feedback.linkText={0}
+app.feedback.link={0}
+app.footer.link.1={0}
+app.footer.linkText.1={0}
 
 url.accountingLineImport.instructions=html/help/AccountingLineImport.html
 warning.core.bo.AccountImportLengthMismatch=Warning: One or more imported lines was not the expected length
