--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry exported="true" kind="var" path="TOMCAT_LIB_HOME/jsp-api.jar"/>
 	<classpathentry exported="true" kind="var" path="DRIVERS_DIRECTORY/ojdbc14.jar"/>
 	<classpathentry kind="var" path="DRIVERS_DIRECTORY/mysql-connector-java-5.0.5-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/p6spy-1.3-patched.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/activation-1.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/backport-util-concurrent-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-beanutils-1.7.jar"/>
