--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -883,7 +883,7 @@ errors.item.amnd.invalidAmt={0} of {1} is less than the amount invoiced.
 errors.item.quantity.required={0} of {1} is invalid; since the po has a valid {2}, {0} must be entered here
 errors.item.quantity.tooMany={0} of {1} cannot be changed to more than {2}. 
 errors.item.amount.alreadyPaid=Further payment cannot be made on {0} because it has already been fully paid.
-errors.item.accounting.amount.invalid={0} has an invalid amount.
+errors.item.accounting.amount.invalid={0} accounts cannot have an empty or zero amount.
 errors.item.accounting.total={0} has invalid totals. The total percent of the accounts must equal 100%.
 errors.item.accounting.total.amount={0} has invalid totals. The total amount of the accounts must equal {1}.
 errors.item.percent=All {0}s of {1} must be whole numbers between 1-100; including no commas are allowed in numeric fields
